--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,36 @@
-version: '3.8'
-
 services:
-  flask-app:
-    build: .
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: django
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: django_db
     volumes:
-      - .:/src
+      - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5000:5000"
-    command: python3 dz4_flask.py
+      - "5432:5432"
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: gunicorn myapp.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+    environment:
+      - DJANGO_SETTINGS_MODULE=myapp.settings
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - .:/app
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+
+volumes:
+  postgres_data:
