--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-Flask==2.0.3
-Werkzeug==2.0.3
+asgiref==3.8.1
+Django==5.1.5
+djangorestframework==3.15.2
+sqlparse==0.5.3
+gunicorn
+psycopg2
+python-dotenv
+django-filter
+djangorestframework-simplejwt
+django-cors-headers
+django-extensions
